--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "chroma-js": "^2.1.2",
     "d3": "^7.2.1",
-    "sirv-cli": "^1.0.0"
+    "d3-bboxCollide": "^1.0.4",
+    "d3-force-boundary": "^0.0.2",
+    "sirv-cli": "^1.0.0",
+    "three": "^0.139.0"
   }
 }
