--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "^7.2.1",
     "d3-bboxCollide": "^1.0.4",
     "d3-force-boundary": "^0.0.2",
+    "mathjs": "^10.4.2",
     "sirv-cli": "^1.0.0",
     "three": "^0.139.0"
   }
