Squashed commit of the following:
commit 363f05ee5da5baa7b52043c62d1fb747231ae5e7
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Mon Apr 4 16:58:26 2022 +0200

    last one

commit 72e451d1c6f7a5c4caef667a9620626f6dcf3876
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Mon Apr 4 16:44:52 2022 +0200

    finished

commit 66cd39aca214bb7872fce3df82d60668e11911c6
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Mon Apr 4 14:38:31 2022 +0200

    all works 🎉

commit 5db6984cbaf05ba72dbb5b0a4f31958d89945b99
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Sun Apr 3 13:32:15 2022 +0200

    interim

commit 2adabf5edd1fe6c549503f0fd617eb0e8916e2d2
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Sun Apr 3 00:46:46 2022 +0200

    sub source labels

commit ad84ba93fb04e7a52164cad4f3717f0d89751ea8
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Fri Apr 1 17:39:40 2022 +0000

    interim

commit 16afa765421b936449dd8b91c25e1408d3ade865
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Fri Apr 1 16:39:41 2022 +0200

    interim

commit 8e8aeb4c392aba183b777f249f4a70ab38a80752
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Fri Apr 1 14:15:14 2022 +0200

    implemented pollutant select

commit 58e617130636daa0783e556efdf59a4ebd3e03e9
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Fri Apr 1 09:13:26 2022 +0200

    interim

commit 29f5808465d67b35accc4f9bc1480e498cdaa3ad
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Thu Mar 31 13:21:51 2022 +0200

    added sub sources

commit aa45918cef915e43161b7041983a9f7d81c73809
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Thu Mar 31 11:30:06 2022 +0200

    interim

commit f2849de28ae39a0721b97bcb673c8e920ee37c17
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:   Sat Mar 26 14:41:37 2022 +0100

    componized project

    Finished first graph

commit 4f91fb03a205883eada3319ca8f36f249ce0bee9
Author: Gustav Neustadt <gustav@einfach-neu.de>
Date:  

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "chroma-js": "^2.1.2",
     "d3": "^7.2.1",
-    "sirv-cli": "^1.0.0"
+    "d3-bboxCollide": "^1.0.4",
+    "d3-force-boundary": "^0.0.2",
+    "mathjs": "^10.4.2",
+    "sirv-cli": "^1.0.0",
+    "svelte-gestures": "^1.4.1",
+    "three": "^0.139.0"
   }
 }
